@@ -1,16 +1,16 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+# Note: this file was auto-generated by Module::Build::Compat version 0.2808_01
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
+          'PL_FILES' => {},
+          'INSTALLDIRS' => 'site',
           'NAME' => 'Symbol::Approx::Sub',
+          'EXE_FILES' => [],
           'VERSION_FROM' => 'lib/Symbol/Approx/Sub.pm',
           'PREREQ_PM' => {
-                           'Carp' => '0',
-                           'Devel::Symdump' => '0',
-                           'Test::More' => '0'
-                         },
-          'INSTALLDIRS' => 'site',
-          'EXE_FILES' => [],
-          'PL_FILES' => {}
+                           'Test::More' => 0,
+                           'Devel::Symdump' => 0,
+                           'Carp' => 0
+                         }
         )
 ;
